# qwen-cli

./: .env  .gitignore  CHANGELOG.md  LICENSE  README.md  next-step.md  pyproject.toml  setup.py
config/: config.bak.json  config.json  config.new.json  personas.json
docs/: README.md  config-options.md  roadmap.md
src/: __init__.py
src/qwen_cli/: __init__.py  __main__.py  cli.py
src/qwen_cli/commands/: __init__.py  ask.py  chat.py  config_cmd.py  gui.py  test_cmd.py
src/qwen_cli/core/: __init__.py  chat_logger.py  cli.py  config.py  logger.py  ollama.py  ollama_client.py  strings.py  workspace.py
tests/: test_chat_cli.py  test_cli.py  test_cli_logging.py  test_config.py  test_history.py  test_logger.py  test_ollama.py  test_phase0.py  test_version.py
